// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleLinks should not render component 1`] = `
<div>
  <div
    class="dark"
  >
    <div
      class="className bg-dark-2 dark:bg-dark-dark-2 text-primary dark:text-dark-primary text-c3 lg:text-c4"
    >
      <div
        data-testid="container"
      />
    </div>
  </div>
</div>
`;

exports[`ArticleLinks should render ul, li, a 1`] = `
<div>
  <div
    class="dark"
  >
    <div
      class="className bg-dark-2 dark:bg-dark-dark-2 text-primary dark:text-dark-primary text-c3 lg:text-c4"
    >
      <div
        data-testid="container"
      >
        <ul
          class="list-disc list-inside pl-4"
        >
          <li
            class="h-12"
          >
            <a
              class="underline text-accent-1 dark:text-dark-accent-1 hover:text-secondary hover:dark:text-dark-secondary"
              href="https://www.google.com/"
              target="_blank"
              title="Google"
            >
              Google
            </a>
          </li>
          <li
            class="h-12"
          >
            <a
              class="underline text-accent-1 dark:text-dark-accent-1 hover:text-secondary hover:dark:text-dark-secondary"
              href="https://www.linkedin.com/"
              target="_blank"
              title="LinkedIn"
            >
              LinkedIn
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
